# spatial-hashing

./: Cargo.toml  readme.md
src/: main.rs  run.rs  scene.rs
src/scene/: boid.rs  config.rs  entity.rs  paint.rs  space.rs  uniforms.rs
src/scene/boid/: entry.rs
src/scene/entity/: instance.rs  instance_frag.wgsl  share.rs  single.rs
src/scene/space/: draw.rs  space_lines.wgsl  unit.rs
