[package]
name = "spatial-hashing"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.9.0"
rand = "0.8.5"
ready-paint = "0.1.2"
wgpu = "23.0.1"

[dependencies.bytemuck]
version = "1.21.0"
features = ["derive"]

[dependencies.glam]
version = "0.29.2"

[dependencies.pollster]
version = "0.4.0"

[dependencies.spin_sleep]
version = "1.3.0"

[dependencies.winit]
version = "~0.30.7"
